# service-request-info

./: LICENSE  README.md  service-request-infno-spec-1.0.0-swagger.json
src/server/: .gitignore  docker-compose.yaml  openapi.yaml  requirements.txt  setup.cfg
src/server/.openapi-generator/: FILES
src/server/coct_sr_info_server/: main.py  security_api.py
src/server/coct_sr_info_server/apis/: classification_api.py  service_request_info_api.py
src/server/coct_sr_info_server/logic/: city_api_interface.py  utils.py
src/server/coct_sr_info_server/models/: image_recognition_schema.py  logger.py  service_request_schema.py  service_request_stats_schema.py  service_request_stats_schema_area_stats.py
src/server/tests/: conftest.py  test_classification_api.py  test_service_request_info_api.py
