[metadata]
name = coct_sr_info_server
version = 1.0.0
description = This is a radically open, non-authed API intended to provide information on service requests to the residents of Cape Town
long_description = file: README.md
keywords = OpenAPI Service Request Info API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =.
packages = find_namespace:

[options.packages.find]
where = .
